--- a/config/database.yml
+++ b/config/database.yml
@@ -26,3 +26,9 @@ production:
   encoding: unicode
   pool: 5
   database: db/production.sqlite3
+
+production:
+  <<: *default
+  adapter: postgreql
+  encoding: unicode
+  pool: 5
